--- a/index.html
+++ b/index.html
@@ -43,8 +43,25 @@
       <p class="paragraph">
         O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.
       </p>
+      <img src="./assets/Parque.jpg" alt="">
+      <h2>3. Parque Yongdusan</h2>
+      <p class="paragraph">O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.
+
+<h3>Bom para:</h3> 
+<ul>
+<li><p id="casais">Casais</p></li>
+<li><p id="Familias">Famílias</p></li>
+<li><p id="orcamentos">Orçamentos</p></li>
+</ul>
+
+  </p>
     </section>
+    <div class="divider"></div>
+    <p id="centralizar">As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo. </p>
     </main>
   </div>
+  <footer>
+  Feito Com <img src="./assets/heart.svg" alt="Coraçãozin"> pela Rocketseat
+</footer>
 </body>
 </html>
